Changing signatures to make SNMP agent runnable from Objects, not only from configuration files. Code cleanup.